css/app.css
/* ... */
/*****  OVERLAY POPUP ******/

.overlay-alert {
  z-index: 1000;
  position: absolute;
  top: 0;
  left: 0;
  text-align: left;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.9);
}

.overlay-container {
  background-color: #121317;
  position: fixed;
  font-family: "Lato", Helvetica, Arial, "Lucida Grande", sans-serif;
  font-weight: 500;
  letter-spacing: 1.1px;
  width: auto;
  height: auto;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -webkit-transform: translate(-50%, -50%);
  border-radius: 5px;
  z-index: 2000;
  overflow: hidden;   /* keeps rounded edge on top of title bar */
}

.overlay-title {
  line-height: 28px;
  font-size: 16px;
  color: #fff;
  background-color: #1b1e28;
  text-align: center;
  height: 60px;
  line-height: 60px;
  white-space: nowrap;
  text-transform: uppercase;
}

.overlay-message {
  font-size: 14px;
  line-height: 20px;
  color: #fff;
  display: flex;
  flex-direction: row;
  align-items: center;
  align-content: space-around;
  justify-content: space-around;
  height: 170px;
  width: 560px;
  padding: 0 20px;
  overflow: hidden;
}
.overlay-message.narrow {
  width: auto;
  max-width: 560px;
  min-width: 300px;
}
.overlay-message > .overlay-im-icon {
  max-height: 70px;
  background-color: transparent;
  border-radius: 35%;
  padding: 10px;
  border: 5px solid #1b1e28;
  cursor: pointer;
}

.overlay-button {
  display: block;
  width: 95%;
  background-color: #1b1e28;
  border-radius: 5px;
  color: #fff;
  padding: 15px;
  font-size: 16px;
  border: 0;
  margin: 0 auto;
  margin-bottom: 15px;
  text-transform: uppercase;
  text-align: center;
}
.overlay-button.success {
  background-color: #418258;
}
.overlay-button.failure {
  background-color: #954b4b;
}

.overlay-footer {
  padding: 0 15px;
}
.overlay-footer .overlay-footer-item {
  display: block;
  background-color: #1b1e28;
  color: #fff;
  font-size: 16px;
  border: 0;
  border-radius: 5px;
  margin: 0 auto 15px auto;
  text-transform: uppercase;
  text-align: center;
  min-width: 430px;
  height: 55px;
  line-height: 55px;
}
.overlay-footer .success-footer-item {  
  background-color: #418258;
}
.overlay-footer .failure-footer-item {
  background-color: #954b4b;
}



.overlay-button:hover {
  opacity: .5;
  cursor: pointer;
}

.overlay-spinner {
  display: none;
  position: absolute;
  right: 15px;
  top: -12px;
}
.overlay-container.is-loading .overlay-spinner {
  display: block;
}


@media (max-width: 600px) {
  .overlay-container {
    width: 90%;
  }
  .overlay-message {
    width: auto;
    height: 140px;
  }
  .overlay-message.narrow {
    min-width: auto; 
  }
  .overlay-footer .overlay-footer-item {
    height: auto;
    min-width: auto;
    line-height: 1.2em;
    padding: 15px;
  }
  .overlay-message > .overlay-im-icon {
    width: 12%;
  }

}
  

